# libmpdataxx

./: .travis.yml  CMakeLists.txt  COPYING  CREDITS  Dockerfile  Doxyfile  FindBlitz++.cmake  HACKING  README  README.md  Readme.md  TODO  libmpdata++-config.cmake
libmpdata++/: CMakeLists.txt  bib.hpp  blitz.hpp  doc.hpp  git_revision.hpp  idxperm.hpp  kahan_reduction.hpp  opts.hpp
libmpdata++/bcond/: bcond.hpp  cyclic_1d.hpp  cyclic_2d.hpp  cyclic_3d.hpp  cyclic_common.hpp  fixed_2d.hpp  fixed_3d.hpp  gndsky_2d.hpp  gndsky_3d.hpp  open_1d.hpp  open_2d.hpp  open_3d.hpp  open_common.hpp  polar_2d.hpp  polar_3d.hpp  polar_common.hpp  remote_1d.hpp  remote_2d.hpp  remote_3d.hpp  rigid_2d.hpp  rigid_3d.hpp  shared.hpp
libmpdata++/bcond/detail/: bcond_common.hpp  cyclic_common.hpp  open_3d_common.hpp  polar_common.hpp  remote_3d_common.hpp  remote_common.hpp
libmpdata++/concurr/: any.hpp  boost_thread.hpp  cxx11_thread.hpp  openmp.hpp  serial.hpp  threads.hpp
libmpdata++/concurr/detail/: concurr_common.hpp  concurr_common_hlpr.hpp  concurr_common_ref.hpp  concurr_common_reg.hpp  concurr_ref_common_hlpr.hpp  distmem.hpp  sharedmem.hpp  sharedmem_refined.hpp  timer.hpp
libmpdata++/detail/: error.hpp
libmpdata++/formulae/: arakawa_c.hpp  common.hpp  diagnose_formulae.hpp  domain_decomposition.hpp  donorcell_formulae.hpp  fractal_reconstruction.hpp  idxperm.hpp  kahan_sum.hpp  leapfrog_formulae.hpp  nabla_formulae.hpp  opts.hpp  phc.hpp  refined_grid.hpp  stress_formulae.hpp  stretching_parameters.hpp
libmpdata++/formulae/mpdata/: formulae_mpdata_1d.hpp  formulae_mpdata_2d.hpp  formulae_mpdata_3d.hpp  formulae_mpdata_common.hpp  formulae_mpdata_common_2d.hpp  formulae_mpdata_common_3d.hpp  formulae_mpdata_dfl_1d.hpp  formulae_mpdata_dfl_2d.hpp  formulae_mpdata_dfl_3d.hpp  formulae_mpdata_fct_1d.hpp  formulae_mpdata_fct_2d.hpp  formulae_mpdata_fct_3d.hpp  formulae_mpdata_fdiv_1d.hpp  formulae_mpdata_fdiv_2d.hpp  formulae_mpdata_fdiv_3d.hpp  formulae_mpdata_g_1d.hpp  formulae_mpdata_g_2d.hpp  formulae_mpdata_g_3d.hpp  formulae_mpdata_gc_1d.hpp  formulae_mpdata_gc_2d.hpp  formulae_mpdata_gc_3d.hpp  formulae_mpdata_hot_1d.hpp  formulae_mpdata_hot_2d.hpp  formulae_mpdata_hot_3d.hpp  formulae_mpdata_psi_1d.hpp  formulae_mpdata_psi_2d.hpp  formulae_mpdata_psi_3d.hpp
libmpdata++/output/: gnuplot.hpp  hdf5.hpp  hdf5_ref.hpp  hdf5_xdmf.hpp
libmpdata++/solvers/: boussinesq.hpp  donorcell_1d.hpp  donorcell_2d.hpp  donorcell_3d.hpp  leapfrog_1d.hpp  mpdata.hpp  mpdata_1d.hpp  mpdata_2d.hpp  mpdata_fct_1d.hpp  mpdata_fct_2d.hpp  mpdata_rhs.hpp  mpdata_rhs_vip.hpp  mpdata_rhs_vip_prs.hpp  mpdata_rhs_vip_prs_sgs.hpp  mpdata_rhs_vip_prs_sgs_fra.hpp  shallow_water.hpp  solver_inhomo.hpp  solver_pressure_cr.hpp  solver_pressure_mr.hpp  solver_pressure_pc.hpp
tests/: CMakeLists.txt
tests/bcbf/: CMakeLists.txt  bombel.hpp  boussinesq.hpp  test_smooth_bombel.cpp  test_smooth_boussinesq.cpp  test_step_bombel.cpp  test_step_boussinesq.cpp
tests/bombel/: CMakeLists.txt  bombel.hpp  test_bombel.cpp
tests/concurrent_1d/: CMakeLists.txt  test_concurrent_1d.cpp
tests/cr_bombel/: CMakeLists.txt  test_cr_bombel.cpp
tests/donorcell/: donorcell_1d.hpp  donorcell_3d.hpp
tests/err_isolines/: CMakeLists.txt  plot.py  test_err_isolines.cpp
tests/gnuplot-iostream/: CMakeLists.txt  test_gnuplot-iostream.cpp
tests/gnuplot-iostream_1d/: CMakeLists.txt  test_gnuplot-iostream_1d.cpp
tests/gnuplot-iostream_2d/: CMakeLists.txt  test_gnuplot-iostream_2d.cpp
tests/harmosc/: CMakeLists.txt  coupled_harmosc.hpp  test_harmosc.cpp
tests/kahan_sum/: CMakeLists.txt  test_kahan_sum.cpp
tests/lauritzen_et_al_2012_GMD/: CMakeLists.txt  filaments.py  gmd_2012.cpp  gmd_2012.hpp  mixing.py  stats_and_plots.py
tests/lcph_kessler/: CMakeLists.txt  cloud.hpp  cloud_bulk.hpp  cloud_common.hpp  icmw8_case1.hpp  test_lcph_kessler.cpp
tests/leapfrog/: leapfrog_1d.hpp
tests/mp3_paper_2018_JCP/: CMakeLists.txt  README.md
tests/mp3_paper_JCP/: CMakeLists.txt  README.md
tests/mpdata_1d_opt_abs/: CMakeLists.txt  test_mpdata_1d_opt_abs.cpp
tests/mpdata_1d_opt_eps/: test_mpdata_1d_opt_eps.cpp
tests/mpdata_1d_opt_iga/: test_mpdata_1d_opt_iga.cpp
tests/mpdata_1d_opt_khn/: CMakeLists.txt  test_mpdata_1d_opt_khn.cpp
tests/mpdata_1d_opt_nkh/: test_mpdata_1d_opt_nkh.cpp
tests/mpdata_1d_opt_npa/: CMakeLists.txt  test_mpdata_1d_opt_npa.cpp
tests/mpdata_1d_opt_nug/: test_mpdata_1d_opt_nug.cpp
tests/mpdata_1d_opt_pds/: CMakeLists.txt  test_mpdata_1d_opt_pds.cpp
tests/mpdata_1d_opt_sss/: CMakeLists.txt  test_mpdata_1d_opt_sss.cpp
tests/mpdata_1d_opt_toa/: CMakeLists.txt  test_mpdata_1d_opt_toa.cpp
tests/mpdata_1d_opt_tot/: test_mpdata_1d_opt_tot.cpp
tests/mpdata_fct_1d/: test_mpdata_fct_1d.cpp
tests/nair_jablonowski_2008/: CMakeLists.txt
tests/over_the_pole/: CMakeLists.txt  cmap.xml  plot.py  test_over_the_pole.cpp
tests/paper_2015_GMD/: CMakeLists.txt
tests/paper_example_1/: CMakeLists.txt  test_paper_example_1.cpp
tests/paper_example_2/: CMakeLists.txt  test_paper_example_2.cpp
tests/particles/: CMakeLists.txt  particles.cpp  particles.hpp  particles_cpp.cpp  particles_cuda.cu  particles_openmp.cpp  test_particles.cpp
tests/rotating_cone/: CMakeLists.txt  test_issue.cpp  test_issue2.cpp  test_rotating_cone.cpp
tests/rotating_cone_nug/: CMakeLists.txt  test_rotating_cone_nug.cpp
tests/rotating_sphere/: CMakeLists.txt  plot.py  test_rotating_sphere.cpp
tests/sandbox/: CMakeLists.txt
tests/sandbox/2_tgv/: tgv_2d.cpp  (+1 more)
tests/shallow_water/: CMakeLists.txt  analytic_eq.py  papierplot_shallow_water_1d.py  papierplot_shallow_water_2d.py  papierplot_shallow_water_2d_el.py  plot2D_shallow_water_2d.py  plot_settings.py  plot_shallow_water_1d.py  shallow_water.hpp  spreading_drop_1d.cpp  spreading_drop_2d.cpp  spreading_drop_2d_el.cpp  test_shallow_water.cpp  test_shallow_water_1d.cpp  test_shallow_water_2d.cpp
tests/todo_3d/: CMakeLists.txt  test_todo_3d.cpp
tests/tutorial/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/var_sign_2d/: CMakeLists.txt  test_var_sign_2d.cpp
(+582 files in other folders)
