add_subdirectory(gnuplot-iostream_1d)
add_subdirectory(gnuplot-iostream_2d)
add_subdirectory(var_sign_2d)
add_subdirectory(mpdata_fct_1d)
add_subdirectory(mpdata_1d_opt_abs)
add_subdirectory(mpdata_1d_opt_tot)
add_subdirectory(mpdata_1d_opt_npa)
add_subdirectory(mpdata_1d_opt_iga)
add_subdirectory(spreading_drop_2d)
add_subdirectory(straka)
add_subdirectory(turbulence)
