# adv
add_subdirectory(0_basic_example)
add_subdirectory(1_advscheme_opts)
add_subdirectory(2_convergence_1d)
add_subdirectory(3_rotating_cone_2d)
add_subdirectory(4_revolving_sphere_3d)
add_subdirectory(5_over_the_pole_2d)
# adv+rhs
add_subdirectory(6_coupled_harmosc)
# adv+rhs+vip
add_subdirectory(7_shallow_water)
# adv+rhs+vip+prs
add_subdirectory(8_boussinesq_2d)
